# sleep-tracker

./: .gitignore  README.md
dfrobot_c1001/: Cargo.toml
dfrobot_c1001/examples/: basics.rs
dfrobot_c1001/src/: lib.rs
mcp342x/: Cargo.toml
mcp342x/examples/: read_voltage.rs
mcp342x/src/: lib.rs
poc_testing/: BME280_read_data.py  C1001_mmWave_example.py  ENS160_get_data.py  README.md  camera_config.json  camera_test.py  pyproject.toml  setup.yml  thermistor_ADC_test.py
poc_testing/hardware_libraries/: DFRobot_BME280.py  DFRobot_ENS160.py  DFRobot_HumanDetection.py  MCP342x.py
python-sleep-plotter/: pyproject.toml
python-sleep-plotter/src/: app.py  plotter.py
python-sleep-plotter/src/templates/: index.html
sleep_recorder/: Cargo.toml
sleep_recorder/examples/: ens160_test.rs
sleep_recorder/src/: audio_analysis.rs  data.rs  image_analysis.rs  lib.rs  main.rs  sensor.rs
