[project]
name = "poc_testing"
version = "0.1.0"
description = "Proof of concept testing of hardware for the sleep tracker project."
authors = [
    {name = "Alexander Wood-Thomas"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spidev (>=3.6,<4.0)",
    "smbus2 (>=0.5.0,<0.6.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyserial (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
