[project]
name = "python-sleep-plotter"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py (>=3.13.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
