[package]
name = "sleep_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
bme280 = "0.5.1"
chrono = "0.4.40"
hdf5 = "0.8.1"
linux-embedded-hal = "0.4.0"
rscam = "0.5.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
