[package]
name = "sleep_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
bme280 = { version = "0.5.1", features = ["with_std"] }
chrono = "0.4.40"
ens160-aq = "0.2.10"
hdf5 = "0.8.1"
linux-embedded-hal = "0.4.0"
rscam = "0.5.5"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mcp342x = { path = "../mcp342x" }
dasp = "0.11.0"
test-log = "0.2.17"
minimp3 = { git = "https://github.com/germangb/minimp3-rs", rev = "refs/pull/44/head" }
